--- a/public/linear_regression.html
+++ b/public/linear_regression.html
@@ -1,250 +1,32 @@
 <html>
-  <head>
-      <!-- jQuery needed for annotations -->
-    <!-- <script src="http://code.highcharts.com/modules/exporting.js"></script> -->
-    <!-- <script src="//rawgithub.com/phpepe/highcharts-regression/master/highcharts-regression.js"></script> -->
-      <script
-        src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-        crossorigin="anonymous">
-      </script>
-      <script src="./highcharts.js"></script>
-      <!-- <script src="https://code.highcharts.com/highcharts-more.js"></script> -->
-      <script src="./annotations.js"></script>
-    <title>Data Analysis</title>
-  </head>
-  <body>
-    <div style="width:450px;" id="container">Loading</div>
-    <script>
-      function evaluatePValue(pValue) {
-        if (pValue < 0.0001) {
-          return `<td><0.0001</td>`
-        } else if (pValue < 0.001) {
-          return `<td>${pValue}</td>`
-        } else if (pValue < 0.01) {
-          return `<td>${pValue}</td>`
-        }
-        return `<td style=color:green;>${pValue}</td>`
-      }
-      window.opener.postMessage('ready', '*');
-      const container = document.getElementById('container');
-      function receiveMessage(event) {
-        console.log('TARGET', event);
-        const {
-          upperBand,
-          lowerBand,
-          colXLabel,
-          colYLabel,
-          tempABVals,
-          corrcoef,
-          covariance,
-          colAMean,
-          colAStdev,
-          colBMean,
-          colBStdev,
-          pValue,
-          linearRegressionLinePoints,
-          linearRegressionLineEquation,
-          linearRegressionLineSlope,
-          linearRegressionLineR2,
-          linearRegressionLineYIntercept } = event.data;
-        const options = {
-          chart: {
-            marginTop: 100,
-            height: 400,
-            width: 400
-          },
-          credits: false,
-          title: {
-            text: `${colYLabel} by ${colXLabel}`
-          },
-          xAxis: {
-            title: { text: colXLabel },
-          },
-          yAxis: {
-            title: { text: colYLabel },
-          },
-          legend: {
-            layout: 'vertical',
-            align: 'right',
-            verticalAlign: 'middle'
-          },
 
-          plotOptions: {
-            series: {
-              jitter: {
-                x: 0.3,
-                y: 0.3
-              },
-              label: {
-                connectorAllowed: false
-              },
-              stickyTracking: false,
-              events: {
-                legendItemClick: function () {
-                  if (this.visible) {
-                    return false;
-                  } else {
-                    let series = this.chart.series,
-                    i = series.length,
-                    otherSeries;
-                    while (i--) {
-                      otherSeries = series[i]
-                      if (otherSeries !== this && otherSeries.visible) {
-                        otherSeries.hide();
-                      }
-                    }
-                  }
-                }
-              },
-            }
-          },
-          series: [
-          {
-              name: 'Points',
-              type: 'scatter',
-              id: 's1',
-              data: tempABVals,
-              visible: true,
-            },
-            {
-              name: 'Points with Linear Regression Line',
-              type: 'scatter',
-              id: 's2',
-              data: tempABVals,
-              visible: false,
-            },
-            {
-              name: 'Linear Regression Line',
-              type: 'line',
-              linkedTo: 's2',
-              data: linearRegressionLinePoints,
-              visible: false,
-            },
-            // {
-            //   name: 'Points with Linear Regression Line and Confidence bands',
-            //   type: 'scatter',
-            //   id: 's3',
-            //   data: tempABVals,
-            //   visible: false,
-            // },
-            // {
-            //   name: 'Linear Regression Line',
-            //   type: 'line',
-            //   linkedTo: 's3',
-            //   data: linearRegressionLinePoints,
-            //   visible: false,
-            // },
-            // {
-            //   name: 'Confidence Band Lower',
-            //   type: 'line',
-            //   linkedTo: 's3',
-            //   stroke: 'red',
-            //   dashStyle: 'dot',
-            //   data: lowerBand,
-            //   visible: false,
-            // },
-            // {
-            //   name: 'Confidence Band Upper',
-            //   type: 'line',
-            //   linkedTo: 's3',
-            //   stroke: 'red',
-            //   dashStyle: 'dot',
-            //   data: upperBand,
-            //   visible: false,
-            // },
-            {
-              name: 'Histogram',
-              type: 'column',
-              visible: false,
-              data: tempABVals,
-              borderWidth: 0,
-            },
-          ],
+<head>
+  <script src="./d3.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="analysis-window.css">
+  <title>Data Analysis</title>
+</head>
 
-          responsive: {
-            rules: [{
-              condition: {
-                maxWidth: 500
-              },
-              chartOptions: {
-                legend: {
-                  layout: 'horizontal',
-                  align: 'center',
-                  verticalAlign: 'bottom'
-                }
-              }
-            }]
-          }
-        }
-        const chart = Highcharts.chart(container, options);
-        // Hack to fix the ticks not appearing correctly on first render
-        chart.series[0].hide();
-        chart.series[0].show();
-        const template = `<div style="text-align: center; margin: 0 3em;">
-            <h4>Summary Statistics</h4>
-              <table style="width: 100%;">
-                <tr>
-                  <td>Pearson's Correlation:</td>
-                  <td>${corrcoef}</td>
-                </tr>
-                <tr>
-                  <td>p:</td>
-                  ${evaluatePValue(pValue)}
-                </tr>
-                <tr>
-                  <td>Covariance:</td>
-                  <td>${covariance}</td>
-                </tr>
-                <tr>
-                  <td>Count:</td>
-                  <td>${tempABVals.length}</td>
-                </tr>
-              </table>
-              <br>
-              <table style="width: 100%;">
-                <tr>
-                  <td style="font-weight: bold;">Variable</td>
-                  <td style="font-weight: bold;">Mean</td>
-                  <td style="font-weight: bold;">Std Dev</td>
-                </tr>
-                <tr>
-                  <td>${colXLabel}</td>
-                  <td>${colAMean}</td>
-                  <td>${colAStdev}</td>
-                </tr>
-                <tr>
-                  <td>${colYLabel}</td>
-                  <td>${colBMean}</td>
-                  <td>${colBStdev}</td>
-                </tr>
-              </table>
-            <h4>Linear Fit</h4>
-            <table style="width: 100%;">
-              <tr>
-                <td>r²:</td>
-                <td>${linearRegressionLineR2}</td>
-              </tr>
-              <tr>
-                <td>slope:</td>
-                <td>${linearRegressionLineSlope}</td>
-              </tr>
-              <tr>
-                <td>y-intercept:</td>
-                <td>${linearRegressionLineYIntercept}</td>
-              </tr>
-              <tr>
-                <td>equation:</td>
-                <td>${linearRegressionLineEquation}</td>
-              </tr>
-            </table>
-          </div>`
-        const doc = new DOMParser().parseFromString(template, 'text/html');
-        container.appendChild(doc.body.firstChild);
-        window.removeEventListener("message", receiveMessage);
-      }
+<body style="min-width: 100%; min-height: 100%;">
+  <div style="text-align: center;" id="chart" class="chart"></div>
+  <details style="text-align: left;" class="analysis-details" open>
+    <summary class="analysis-summary-title">Chart Options</summary>
+    <div style="margin-left: 2em;">
+      <div><input type="checkbox" value="histogramBorders" onclick="toggleChartElement(this)" checked>Histogram Borders</div>
+      <br>
+      <div><input type="checkbox" checked>Center Polynomial Regressions</div>
+      <div><input type="checkbox" value="linearRegressionLine" onclick="toggleChartElement(this)">Linear Fit <span style="font-size: 1.5em; color: steelblue;">&#9656</span></div>
+      <div style="margin-left: 2em;"><input type="checkbox" value="confidenceBandsFit" onclick="toggleChartElement(this)">Confid Curves Fit <span style="font-size: 1.5em; color: red;">&#9656</span></div>
+      <div style="margin-left: 2em;"><input type="checkbox" value="confidenceBands" onclick="toggleChartElement(this)">Confid Curves Indiv <span style="font-size: 1.5em; color: red;">&#9656</span></div>
+      <div><input type="checkbox" value="degree2PolyLine" onclick="toggleChartElement(this)">Quadratic Fit <span style="font-size: 1.5em; color: green;">&#9656</span></div>
+      <div><input type="checkbox" value="degree3PolyLine" onclick="toggleChartElement(this)">Cubic Fit <span style="font-size: 1.5em; color: darkmagenta;">&#9656</span></div>
+      <div><input type="checkbox" value="degree4PolyLine" onclick="toggleChartElement(this)">Quartic Fit <span style="font-size: 1.5em; color: saddlebrown;">&#9656</span></div>
+      <div><input type="checkbox" value="degree5PolyLine" onclick="toggleChartElement(this)">5th Degree Fit <span style="font-size: 1.5em; color: goldenrod;">&#9656</span></div>
+      <div><input type="checkbox" value="degree6PolyLine" onclick="toggleChartElement(this)">6th Degree Fit <span style="font-size: 1.5em; color: thistle;">&#9656</span></div>
+    </div>
+  </details>
+  <div id="container"></div>
+  <script src="template_helpers.js"></script>
+  <script src="linear_regression.js"></script>
+</body>
 
-      window.addEventListener("message", receiveMessage, false);
-    </script>
-  </body>
 </html>
